# tchap-desktop

./: .gitignore  LICENCE  LICENCE.md  README.md  flake.nix  install-sqlcipher-windows.cmd  package-lock.json  package.json
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build-tauri.yml  build-webapp.yml  clippy.yml  on_merge_master.yml  publish.yml  test_build.yml
bindings/: seshat.ts
nix/: package.nix
scripts/: build-openssl-macos-arm64.sh  build-openssl-macos.sh  build-sqlcipher-macos-arm64.sh  build-sqlcipher-macos.sh  fetch-package.ts  get-latest-file-per-env.sh  tsconfig.json  update-version.sh
src/: config.json  index.html  jitsi.html  recorder.worklet.js.map  sw.js  sw.js.map
src-tauri/: Cargo.toml  Info.plist  build.rs  info.plist  macos_build.rs  tauri.conf.dev.json  tauri.conf.json  tauri.conf.noupdater-windows.json  tauri.conf.noupdater.json  tauri.conf.preprod.json  tauri.conf.prod.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/bindings/: bindings.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/resources/windows/: config.wxs
src-tauri/src/: action_handler.rs  common_commands.rs  common_error.rs  keyring_commands.rs  lib.rs  main.rs  media_auth.rs  seshat_commands.rs  seshat_utils.rs  tray.rs
src-tauri/tests/: integration-test.rs
src/i18n/: cs.15e6051.json  cs.ac40d99.json  de_DE.adba859.json  de_DE.cd2618e.json  el.af1a359.json  el.d560fdb.json  en_EN.899a350.json  en_EN.be23ec3.json  eo.376246b.json  eo.bd10f71.json  es.9337e23.json  es.de3124b.json  et.495dc10.json  et.ab8cdb1.json  fa.0ba2d24.json  fa.5b83c63.json  fi.0f0e306.json  fi.eee5c6b.json  fr.17c2cfb.json  (+43 more)
(+132 files in other folders)
